--- a/OdeToBallonsTowerDefence/app/src/main/res/layout-land/activity_main.xml
+++ b/OdeToBallonsTowerDefence/app/src/main/res/layout-land/activity_main.xml
@@ -10,7 +10,7 @@
 
     <ImageView
         android:id="@+id/introLogo"
-        android:layout_width="wrap_content"
+        android:layout_width="265dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:contentDescription="@string/app_name"
@@ -35,6 +35,7 @@
             android:id="@+id/playerOneTextbox"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:autofillHints="Player One"
             android:ems="10"
             android:inputType="textPersonName"
             android:minHeight="48dp"
@@ -43,13 +44,13 @@
             app:layout_constraintBottom_toTopOf="@+id/playerTwoTextbox"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:autofillHints="Player One" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <EditText
             android:id="@+id/playerTwoTextbox"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:autofillHints="Player Two"
             android:ems="10"
             android:inputType="textPersonName"
             android:minHeight="48dp"
@@ -57,14 +58,33 @@
             android:textAlignment="center"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/playerOneTextbox"
-            android:autofillHints="Player Two" />
+            app:layout_constraintTop_toBottomOf="@+id/playerOneTextbox" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="189dp"
             android:layout_weight="1"
             app:layout_constraintTop_toBottomOf="@+id/playerTwoTextbox">
+
+            <TextView
+                android:id="@+id/textView5"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/rounds"
+                app:layout_constraintBottom_toTopOf="@+id/numberSpinner"
+                app:layout_constraintEnd_toEndOf="@+id/numberSpinner"
+                app:layout_constraintStart_toStartOf="@+id/numberSpinner" />
+
+            <Spinner
+                android:id="@+id/numberSpinner"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:minHeight="48dp"
+                app:layout_constraintBottom_toBottomOf="@+id/startButton"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toEndOf="@+id/startButton"
+                app:layout_constraintTop_toTopOf="@+id/startButton" />
 
             <Button
                 android:id="@+id/howToPlayActivityBtn"
@@ -81,7 +101,7 @@
 
             <ImageButton
                 android:id="@+id/startButton"
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:background="#00FFFFFF"
@@ -89,7 +109,8 @@
                 android:onClick="onGameStart"
                 android:src="@drawable/startbloon"
                 app:layout_constraintBottom_toTopOf="@+id/howToPlayActivityBtn"
-                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/textView5"
+                app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
         </androidx.constraintlayout.widget.ConstraintLayout>
