--- a/OdeToBallonsTowerDefence/app/src/main/res/layout/activity_login.xml
+++ b/OdeToBallonsTowerDefence/app/src/main/res/layout/activity_login.xml
@@ -60,4 +60,13 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <CheckBox
+        android:id="@+id/rememberMe"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/remember_me"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/signup" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
