--- a/OdeToBallonsTowerDefence/app/src/main/res/menu/game_menu.xml
+++ b/OdeToBallonsTowerDefence/app/src/main/res/menu/game_menu.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:id="@+id/end_game" android:title="End Game" />
+    <item
+        android:id="@+id/end_game"
+        android:title="@string/end_game" />
 </menu>
